# estudando_rag

./: .gitignore  README.md  app.py  app_bd.py  database_rag.py  pyproject.toml
db/: chroma.sqlite3
